--- a/EstacionamientoNe/EstacionamientoNe/packages.config
+++ b/EstacionamientoNe/EstacionamientoNe/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="LiveCharts" version="0.9.7" targetFramework="net472" />
+  <package id="LiveCharts.Wpf" version="0.9.7" targetFramework="net472" />
   <package id="MaterialDesignColors" version="1.1.2" targetFramework="net472" />
   <package id="MaterialDesignThemes" version="2.5.1" targetFramework="net472" />
+  <package id="MetroChart.WPF" version="0.0.0.3" targetFramework="net472" />
 </packages>
